Demo/force-app/main/default/objects/amount__c/amount__c.object-meta.xml
<CustomObject>
    <label>amount</label>
    <nameField>
        <label>amount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>amounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>