Demo/force-app/main/default/objects/amount__c/fields/Calculated_price__c.field-meta.xml
<CustomField>
    <fullName>Calculated_price__c</fullName>
    <formula>test_field_3__c  * 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>