Demo/force-app/main/default/objects/amount__c/fields/Input1__c.field-meta.xml
<CustomField>
    <fullName>Input1__c</fullName>
    <label>Input1</label>
    <length>16</length>
    <type>Text</type>
</CustomField>