Demo/force-app/main/default/objects/amount__c/fields/Input2__c.field-meta.xml
<CustomField>
    <fullName>Input2__c</fullName>
    <label>Input2</label>
    <length>16</length>
    <type>Text</type>
</CustomField>