Demo/force-app/main/default/objects/amount__c/fields/test_field_2__c.field-meta.xml
<CustomField>
    <fullName>test_field_2__c</fullName>
    <label>test field 2</label>
    <type>TextArea</type>
</CustomField>