Demo/force-app/main/default/objects/amount__c/fields/test_field_3__c.field-meta.xml
<CustomField>
    <fullName>test_field_3__c</fullName>
    <label>test field 3</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>